fixing alignment in authors and renaming file

--- a/_sass/pages/_docs.scss
+++ b/_sass/pages/_docs.scss
@@ -71,7 +71,7 @@
 
   .team-member {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     >img {
       grid-column: 1;
@@ -82,49 +82,17 @@
       object-fit: cover;
       margin-right: 47px;
 
-      .core-team-alumni>& {
-        width: 60px;
-        height: 60px;
-        margin-right: 10px;
-      }
-
       border-radius: 50%;
-    }
-
-    &.inactive>img {
-      filter: grayscale(1);
     }
 
     .team-member__inner {
       display: flex;
-      flex-direction: column;
+      //flex-direction: column;
     }
 
     .member_name {
       font-size: 1.2em;
       line-height: 1.3;
-      width: 406px;
-    }
-
-    &:not(.inactive) .member_name {
-      color: $black;
-    }
-
-    .handles {
-      i {
-        transform: scale(0.7);
-        opacity: 0.6;
-        margin-right: -5px;
-        margin-top: -3px;
-      }
-
-      +* {
-        margin-top: 5px;
-      }
-    }
-
-    .status {
-      font-style: italic;
     }
   }
 
